[project]
name = "HPI_purarue"
version = "0.1.0"
description = "A Python interface to my life"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
backup_to = "my.utils.backup_to.__main__:main"

[project.urls]
Homepage = "https://github.com/purarue/HPI"

[tool.mypy]
pretty = true
show_error_context = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
disallow_incomplete_defs = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "--verbose tests"

[tool.setuptools.packages.find]
where = ["."]
include = ["my*"]
exclude = []
namespaces = true
